# -CS6013_TA

./: README.md  gloria.txt
Lab1/: disassembly_lab_result.txt  lab1  lab1.c  lab11  lab1_mina  lab1_test  lab1_test.c  lab1copy.c  me.txt
Lab2/: print_int.s  pro
Lab3/: main  main.cpp  main2.cpp  myprogram
Malloc/MallocReplacement/: CMakeLists.txt  main.cpp  msdMalloc.cpp  msdMalloc.h  pro
Malloc/malloc_practice/: CustomMalloc.cpp  CustomMalloc.h  MyMalloc.cpp  MyMalloc.h  main  main.cpp
OpenMP/OpenMP_spring2023/: Makefile  main.cpp  pro
OpenMP/OpenMP_spring2024/: main.cpp  pro
OpenMP/OpenMP_spring204/: Makefile  main.cpp  pro
StudentsFiles/: main  main.cpp
StudentsFiles/Malloc_Students_Submission/Malloc_Lindsay/: HashTable.cpp  HashTable.h  MyMalloc.cpp  MyMalloc.h  main.cpp
ThreadSafeQueue/: SerialQueue.hpp
ThreadSafeQueue/ThreadSafeQueue/: CMakeLists.txt  ConcurrentQueue.hpp  ConcurrentQueueTest.cpp  ConcurrentQueueTest.h  SerialQueue.h  SerialQueueTests.cpp  main.cpp  pro
ThreadSafeQueue/ThreadSafeQueue_2024/: ConcurrentQueue.hpp  ConcurrentQueueTest.cpp  SerialQueue.hpp  SerialQueueTests  SerialQueueTests.cpp  main.cpp  pro
UnixShell/: file1.txt  foo.txt  main.cpp  program  shelpers.cpp  shelpers.hpp
UnixShell2024/: Makefile  main.cpp  program  shelpers.cpp  someFile
myLearing/: foo.txt  main  main.cpp  test
